# trustyai-llm-demo

./: README.md  curl_model  dsc.yaml
automated-red-teaming/: .gitignore  README.md  main.py  notebook-run-locally.py  pyproject.toml
automated-red-teaming/resources/: garak.yaml  prompt_template.yaml  sdg-flow.yaml  taxonomy.json
common/: prompt.py
custom-detectors/: README.md  custom_detectors.py  guardrails.yaml  model_storage_container.yaml  phi4.yaml
docs/: installing_rhoai.md  troubleshooting.md
eval-quickstart-demo/: README.md  evaluation_job.yaml  phi3.yaml
fsi-llamastack-demo/: README.md
fsi-llamastack-demo/.ipynb_checkpoints/: fsi_safety_demo-checkpoint.ipynb
fsi-llamastack-demo/deployment/: model_storage_container.yaml
fsi-llamastack-demo/notebooks/: fsi_safety_demo_notebook.ipynb  fsi_safety_demo_presentation.html  fsi_safety_demo_presentation.ipynb  helpers.py
garak-quickstart-demo/: .gitignore  Containerfile  README.md  garak_kfp_demo.ipynb  pyproject.toml
garak-quickstart-demo/garak_pipeline/: __init__.py  avid_report.py  components.py  config.py  constants.py  errors.py  pipeline.py  pipeline_runner.py  progress_parser.py  result_parser.py  runner.py  utils.py
guardrails/: configmap_auxiliary_images.yaml  configmap_orchestrator.yaml  configmap_vllm_gateway.yaml  gateway_route.yaml  orchestrator_cr.yaml
guardrails-chunkers-demo/: README.md  chunkers.yaml  detector_storage.yaml  hap_detector.yaml  kustomization.yaml  orchestrator.yaml
guardrails-garak-eval/: README.md
guardrails-garak-eval/dataset/: intents.csv
guardrails-garak-eval/guardrails/: README.md
guardrails-language-detector-demo/: README.md  detector_deployment.yaml  detector_storage.yaml  guardrails_auto_config.yaml  llm_deployment.yaml  llm_storage.yaml  service_account.yaml
guardrails-quickstart-demo/: README.md  detector_models.yaml  dsc.yaml  guardrails.yaml  hap.yaml  phi3.yaml
guardrails/hap_detector/: hap.yaml  hap_isvc.yaml  hap_serving_runtime.yaml
istanbul/: README.md  Untitled.ipynb  custom_detectors.py  dataset_pvc.yaml  demo.ipynb  distro.yaml  guardrails.yaml  lls_distro.yaml  model_phi4.yaml  model_storage_container.yaml  qwen3.yaml  run.yaml  serviceaccount.yaml  tokenizer.yaml
istanbul-v2/: generate_notebook.py
istanbul-v2/deployment/: guardrails.yaml  kfp.yaml  model_storage_container.yaml  serviceaccount.yaml
istanbul-v2/notebooks/: fsi_safety_demo_v2.html  fsi_safety_demo_v2.ipynb  helpers.py  ragas_dataset.csv  ragas_dataset_1.csv  ragas_dataset_5.csv  scratch.ipynb
istanbul/.ipynb_checkpoints/: demo-checkpoint.ipynb
istanbul/datasets/: FinEval.jsonl
lemonade-stand-demo/: README.md  dsc.yaml  prompt.py
lemonade-stand-demo/guardrails/: configmap_auxiliary_images.yaml  configmap_vllm_gateway.yaml  hap.yaml  hap_model_container.yaml  orchestrator.yaml  orchestrator_cr.yaml
lemonade-stand-demo/telemetry/: jaeger.yaml  minio.yaml  opentelemetry.yaml  tempo.yaml
lemonade-stand-demo/vllm/: phi3.yaml
llama-stack-playground/: README.md  custom_detectors.py  distro.yaml  guardrails.yaml  model_storage_container.yaml  qwen3.yaml  shield_config.json  trustyai_bundle.yaml
lls-fms-guardrails/: README.md
lls-fms-guardrails/00-detectors/: detector-cpu-template.yaml  detector-gpu-template.yaml  generate-detectors.sh  model-storage.yaml
lls-fms-guardrails/01-orchestrator/: generate-orchestrator-crd.sh  orchestrator-crd.yaml
lls-fms-guardrails/02-lls/: distro.yaml
lm-eval/: lm-eval-job.yaml
model-monitoring-via-custom-guardrails/: README.md  custom_detectors.py  guardrails.yaml
nemo-guardrails-otel/: README.md  namespace.yaml
nemo-guardrails-quickstart/: README.md  _README.md  model_storage_container.yaml  nemo.yaml  serviceaccount.yaml
quickstart-demo/: README.md  guardrails.yaml  model_storage_container.yaml
rag-eval-evalhub-demo/: README.md  rag-eval-getting-started.md  stage1_answer_correctness.ipynb  stage2_retrieval_metrics.ipynb
ragas-quickstart-demo/: .dockerignore  .gitignore  Containerfile  README.md  mlflow_ragas_example.ipynb  pyproject.toml  ragas_kfp_demo.ipynb
ragas-quickstart-demo/magenta_pipelines/: config.py  constants.py  logging_utils.py  mlflow_client.py  pipeline_runner.py
ragas-quickstart-demo/magenta_pipelines/kubeflow/: components.py  pipeline.py
vllm/: granite-guard.yaml  isvc_qwen2.yaml  model_container.yaml  phi3.yaml  phi4.yaml  qwen2.yaml  serving_runtime.yaml
(+86 files in other folders)
