[project]
name = "garak-quickstart-demo"
version = "0.1.0"
description = "Garak security scanning demo on Kubeflow Pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Garak security scanning
    "garak==0.12.0",
    
    # Kubeflow Pipelines
    "kfp==2.14.3",
    "kfp-kubernetes==2.14.3",
    "kfp-server-api==2.14.3",
    
    # Configuration management
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    
    # Storage
    "boto3==1.40.27",
    
    # Kubernetes
    "kubernetes==30.1.0",
    
    # UI/Display
    "rich",
    "tqdm",
    
    # Notebook support
    "ipykernel",
    "jupyter",
]
[dependency-groups]
dev = [
    "ruff",
    "mypy",
]