[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garak-quickstart-demo"
version = "0.1.0"
description = "Garak security scanning demo on Kubeflow Pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kfp>=2.14.6",
    "kfp-kubernetes>=2.14.6",
    "kfp-server-api>=2.14.6",
    "kubernetes>=30.0.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "boto3>=1.35.88",
    "requests",
    "avidtools==0.1.2",
    "pandas>=2.3.3",
    "numpy>=1.26.4",
    "transformers>=4.51.3,<4.57.0",
    "garak==0.12.0",
    "rich",
]

[tool.setuptools.packages.find]
include = ["garak_pipeline*"]
exclude = ["reports*", "examples*", "tests*"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
]